<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical" >
    
	<EditText
	    android:id="@+id/to"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/to"
        android:textIsSelectable="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" />
	<EditText
	    android:id="@+id/subject"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/subject"
        android:textIsSelectable="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/to" />

	<EditText
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_above="@+id/send"
	    android:layout_below="@id/subject"
	    android:gravity="top"
	    android:hint="@string/message"
	    android:textIsSelectable="true" />

	<Button
	    android:id="@id/send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:text="@string/send" />
</RelativeLayout>
